--- a/index.html
+++ b/index.html
@@ -196,25 +196,28 @@
         <div class="container text-center">
             <h2 class="title">Features</h2>
             <ul class="feature-list list-unstyled">
-                <li><i class="fa fa-check"></i> Built-In SuperUser</li>
+                <li><i class="fa fa-check"></i> Built-In SuperSU</li>
                 <li><i class="fa fa-check"></i> OwnSettings</li>
-                <li><i class="fa fa-check"></i> Built-In Changelog</li>
+                <li><i class="fa fa-check"></i> Built-In Changelog Viewer</li>
                 <li><i class="fa fa-check"></i> Network Traffic Monitor</li>
                 <li><i class="fa fa-check"></i> Toast Animations</li>
                 <li><i class="fa fa-check"></i> QS Customization</li>
                 <li><i class="fa fa-check"></i> Clock customization</li>
-                <li><i class="fa fa-check"></i> Theme Engine</li>
+                <li><i class="fa fa-check"></i> CM Theme Engine</li>
                 <li><i class="fa fa-check"></i> Privacy Guard</li>
                 <li><i class="fa fa-check"></i> Pulse Notification Light</li>
                 <li><i class="fa fa-check"></i> Lockscreen Corner Shortcuts</li>
                 <li><i class="fa fa-check"></i> Ambient Display</li>
-                <li><i class="fa fa-check"></i> DT2W (Hardcoded in ROM)</li>
+                <li><i class="fa fa-check"></i> DT2W (Hardcoded in ROM-Only Supported Devices)</li>
                 <li><i class="fa fa-check"></i> Density Changer</li>
                 <li><i class="fa fa-check"></i> Immersive Mode (per App)</li>
                 <li><i class="fa fa-check"></i> Battery Light</li>
                 <li><i class="fa fa-check"></i> Quick and Smart Statusbar</li>
                 <li><i class="fa fa-check"></i> Profiles</li>
                 <li><i class="fa fa-check"></i> Black List</li>
+                <li><i class="fa fa-check"></i> Live Memory Steps</li>
+                <li><i class="fa fa-check"></i> Slim Lockscreen Shortcuts</li>
+                <li><i class="fa fa-check"></i> TRDS 5.0</li>
                 <li><i class="fa fa-check"></i> And many more...</li>
                 <li><i class="fa fa-check"></i> Let Us Know What You Like... Features are always being added</li>
                 <h2 class="title">Credits</h2>
@@ -243,7 +246,8 @@
                             <tr>
                                 <th>Name</th>
                                 <th>Codename</th>
-                                <th>Download</th>
+                                <th>Download Milestone</th>
+                                <th>Download Nightly</th>
                             </tr>
                         </thead>
                         <tbody>
@@ -251,32 +255,51 @@
                                <th>Nexus 6</th>
                                <th>Shamu</th>
                                <td><a href="http://bit.ly/1FTWEEC" target="_blank">Link</a></td>
+                               <td><a href="https://www.androidfilehost.com/?w=files&flid=32575" target="_blank">Link</a></td>
+                        </tr>
+                         <tr>
+                               <th>Moto X</th>
+                               <th>Ghost</th>
+                               <td><a href="http://bit.ly/1Qjar9k" target="_blank">Link</a></td>
+                               <td>N/A</td>
                         </tr>
                         <tr>
                                <th>Android One</th>
                                <th>Sprout4</th>
                                <td><a href="http://bit.ly/1b1HVL4" target="_blank">Link</a></td>
+                               <td>N/A</td>
+                        </tr>
+                                              <tr>
+                               <th>Sony Xperia SP</th>
+                               <th>Huashan</th>
+                               <td><a href="http://bit.ly/1BxlULv" target="_blank">Link</a></td>
+                               <td>N/A</td>
+                        </tr>
+                           <tr>
+                               <th>One Plus One</th>
+                               <th>Bacon</th>
+                               <td><a href="http://bit.ly/1cC8YO6" target="_blank">Link</a></td>
+                               <td><a href="https://www.androidfilehost.com/?w=files&flid=33172" target="_blank">Link</a></td>
+                        </tr>
+                                            <tr>
+                               <th>Samsung Galaxy S3 Mini</th>
+                               <th>Golden</th>
+                               <td><a href="http://forum.xda-developers.com/devdb/project/?id=10191#downloads" target="_blank">Link</a></td>
+                               <td>N/A</td>
                         </tr>
                         <tr>
                                <th>Samsung Galaxy S3</th>
                                <th>I9300</th>
                                <td><a href="http://bit.ly/1d66I22" target="_blank">Link</a></td>
+                               <td>N/A</td>
                         </tr>
-                        <tr>
-                               <th>Moto X</th>
-                               <th>Ghost</th>
-                               <td><a href="http://bit.ly/1Qjar9k" target="_blank">Link</a></td>
-                        </tr>
-                        <tr>
-                               <th>Sony Xperia SP</th>
-                               <th>Huashan</th>
-                               <td><a href="http://bit.ly/1BxlULv" target="_blank">Link</a></td>
-                        </tr>
-                        <tr>
+                                                 <tr>
                                <th>Samsung Galaxy S4</th>
                                <th>Jfltetmo</th>
                                <td><a href="http://bit.ly/1PVdqd0" target="_blank">Link</a></td>
+                               <td>N/A</td>
                         </tr>
+
                         </tbody>
                     </table>
 
