--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
                                <th>Ghost</th>
                                <td><a href="http://bit.ly/1Qjar9k" target="_blank">Link</a></td>
                                <td>N/A</td>
-                               <td><a href="http://bit.ly/ghost" target="_blank">Link</a></td>
+                               <td><a href="http://bit.ly/ownghost" target="_blank">Link</a></td>
                         </tr>
                           <tr>
                                <th>Nexus 5</th>
