--- a/index.html
+++ b/index.html
@@ -297,8 +297,8 @@
                                <th>Sony Xperia SP</th>
                                <th>Huashan</th>
                                <td><a href="https://www.androidfilehost.com/?w=files&flid=33639" target="_blank">Link</a></td>
-                               <td>N/A</td>
-                               <td><a href="https://www.androidfilehost.com/?w=files&flid=32703" target="_blank">Link</a></td>
+                               <td><a href="https://www.androidfilehost.com/?w=files&flid=32703target="_blank">Link</a></td>
+                               <td><a href="http://bit.ly/ownhuashan" target="_blank">Link</a></td>
                           
                         </tr>
                            <tr>
