Added in Moto G

--- a/index.html
+++ b/index.html
@@ -271,6 +271,13 @@
                                <td>N/A</td>
                                <td><a href="http://bit.ly/ownghost" target="_blank">Link</a></td>
                         </tr>
+                             <tr>
+                               <th>Moto G</th>
+                               <th>Falcon</th>
+                               <td><a href="https://www.androidfilehost.com/?w=files&flid=32380" target="_blank">Link</a></td>
+                               <td>N/A</td>
+                               <td>N/A</td>
+                        </tr>
                           <tr>
                                <th>Nexus 5</th>
                                <th>Hammerhead</th>
