--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
                                <th>Falcon</th>
                                <td><a href="https://www.androidfilehost.com/?w=files&flid=32380" target="_blank">Link</a></td>
                                <td>N/A</td>
-                               <td>http://forum.xda-developers.com/moto-g/development/rom-5-1-1r3-thread-ownrom-moto-g-t3135897</td>
+                               <td><a href="http://forum.xda-developers.com/moto-g/development/rom-5-1-1r3-thread-ownrom-moto-g-t3135897"target="_blank">Link</a></td>
                         </tr>
                           <tr>
                                <th>Nexus 5</th>
