--- a/index.html
+++ b/index.html
@@ -94,6 +94,7 @@
                 <li><a href="http://bit.ly/1O2KtWg" target="_blank">View on GitHub</a></li>
                 <li><a href="http://bit.ly/1Q6j6LW" target="_blank">Documentation</a></li>
                 <li><a href="http://bit.ly/1Fye9Gd" target="_blank">Community</a></li>
+                <li><a href="http://owndroid.nl/Stats/stats.php" target="_blank">ROM Stats</a></li>
             </ul>
             <!--//meta-->
         </div>
