--- a/media.html
+++ b/media.html
@@ -6,7 +6,7 @@
 <!--<![endif]-->
 
 <head>
-    <title>Old Downloads</title>
+    <title>Media</title>
     <!-- Meta -->
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -78,114 +78,32 @@
     </header>
     <!--//header-->
 
-    <!-- ******DOCS****** -->
-    <section id="docs" class="docs section">
+
+      <!-- ******ABOUT****** -->
+    <section id="about" class="about section">
         <div class="container">
-            <div class="docs-inner">
 
-
-
- <div class="block">
-                    <h3 class="sub-title text-center">Lollipop [5.0.2]</h3>
-                    <div class="table-responsive">
-                    <table class="table">
-                        <thead>
-                            <tr>
-                                <th>Name</th>
-                                <th>Code</th>
-                                <th>Download ROM</th>
-                                <th>Download Kernel</th>
-                                <th>Gapps</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <tr>
-                                <th scope="row">Samsung Galaxy S5</th>
-                                <td>KLTE</td>
-                                <td><a href="http://bit.ly/1ygqQIi" target="_blank">Link</a></td>
-                                <td><a href="http://bit.ly/1CwekB9" target="_blank">Link</a></td>
-                                <td><a href="http://bit.ly/1z6mejh" target="_blank">Link</a></td>
-                            </tr>
-                            <tr>
-                                <th scope="row">LG Optimus L9</th>
-                                <td>P760</td>
-                                <td><a href="http://bit.ly/1ajkbSq" target="_blank">Link</a></td>
-                                <td>NA</td>
-                                <td><a href="http://bit.ly/1z6mejh" target="_blank">Link</a></td>
-                            </tr>
-                            </tbody>
-                    </table>
-                    </div>
-                    <h3 class="sub-title text-center">Kitkat [4.4.4]</h3>
-                    <div class="table-responsive">
-                    <table class="table">
-                        <thead>
-                            <tr>
-                                <th>Name</th>
-                                <th>Code</th>
-                                <th>Download</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <tr>
-                                <th scope="row">Nexus 5</th>
-                                <td>HAMMERHEAD</td>
-                                <td><a href="http://bit.ly/1b1ACmK" target="_blank">Link</a></td>
-                            </tr>
-                            <tr>
-                                <th scope="row">Samsung Galaxy S2</th>
-                                <td>I9100</td>
-                                <td><a href="http://bit.ly/1de68j1" target="_blank">Link</a></td>
-                            </tr>
-                            <tr>
-                                <th scope="row">Samsung Galaxy S3</th>
-                                <td>I9300</td>
-                                <td><a href="http://bit.ly/1b1ALqm" target="_blank">Link</a></td>
-                            </tr>
-                            <tr>
-                                <th scope="row">Samsung Galaxy S4</th>
-                                <td>JFLTE </td>
-                                <td><a href="http://bit.ly/1DwCbRz" target="_blank">Link</a></td>
-                            </tr>
-                            <tr>
-                                <th scope="row">Sony Xperia Z</th>
-                                <td>YUGA</td>
-                                <td><a href="http://bit.ly/1DKVS7q" target="_blank">Link</a></td>
-                            </tr>
-                            </tr>
-                            <tr>
-                                <th scope="row">G-Apps</th>
-                                <td>Google Edition</td>
-                                <td><a href="http://bit.ly/1GiKotx" target="_blank">Link</a></td>
-                            </tr>
-                            </tr>
-                            <tr>
-                                <th scope="row">G-Apps</th>
-                                <td>Cyanogen Edition </td>
-                                <td><a href="http://bit.ly/1FmoMjT" target="_blank">Link</a></td>
-                            </tr>
-                            </tr>
-                            <tr>
-                                <th scope="row">G-Apps</th>
-                                <td>Default Edition</td>
-                                <td><a href="http://bit.ly/1KgZRhC" target="_blank">Link</a></td>
-                            </tr>
-                        </tbody>
-                    </table>
-                    </div>
-
-                      </div>
-                <!--//block-->
+            <!--//row-->
+            <div class="row text-center">
+                <img width=250 height=423 class="text-center" src="assets/images/888.png">
+                <img width=250 height=423 class="text-center" src="assets/images/777.png">
+                <img width=250 height=423 class="text-center" src="assets/images/666.png">
+                <img width=250 height=423 class="text-center" src="assets/images/555.png">
             </div>
-            <!--//docs-inner-->
         </div>
         <!--//container-->
     </section>
+    <!--//about-->
 
 
-        <!--//container-->
-    </section>
-    </section>
+
+
+
+
+
+
+
+
       <section id="contact" class="contact section has-pattern">
         <div class="container">
             <div class="contact-inner">
