--- a/index.html
+++ b/index.html
@@ -376,7 +376,7 @@
                                <th>Tomato</th>
                                <td><a href="https://basketbuild.com/devs/pranav01/OwnRom/OFFICIAL" target="_blank">Link</a></td>
                                <td><a href="https://basketbuild.com/devs/pranav01/OwnRom/OFFICIAL/Nightlies/Tomato" target="_blank">Link</a></td>
-                               <td><a href="bit.ly/owntomato" target="_blank">Link</a></td>
+                               <td><a href="http://bit.ly/owntomato" target="_blank">Link</a></td>
                         </tr>
 
                         </tbody>
@@ -396,13 +396,13 @@
                             <tr>
                                 <th scope="row">Minimal G-Apps</th>
                                 <td>N/A</td>
-                                <td><a href="http://bit.ly/1F9NHTT" target="_blank">Link</a></td>
+                                <td><a href="https://www.androidfilehost.com/?w=files&flid=33870" target="_blank">Link</a></td>
                             </tr>
                             </tr>
                             <tr>
                                 <th scope="row">Normal G-Apps</th>
                                 <td>N/A</td>
-                                <td><a href="http://bit.ly/1cdgoXL" target="_blank">Link</a></td>
+                                <td><a href="https://www.androidfilehost.com/?w=files&flid=33871" target="_blank">Link</a></td>
                             </tr>
                         </tbody>
                     </table>
@@ -544,7 +544,7 @@
                             <div class="source">
                                 <span class="title">Main Devolper</span>
                                 <br>
-                                <span class="title">Maintains: </span>
+                                <span class="title">Maintains: ROM, Nexus 6 [Shamu], Nexus 5 [Hammerhead], Samsung Galaxy S5 [Klte] </span>
                                 <br />
                                 <span class="name"><a href="https://plus.google.com/+MarkVisser10021991" target="_blank">Link</a></span>
                             </div>
@@ -564,7 +564,7 @@
                             <div class="source">
                                 <span class="title">Web Devolper</span>
                                   <br>
-                                <span class="title">Maintains: </span>
+                                <span class="title">Maintains: Website, Gapps, Moto G 2013 [Falcon] </span>
                                 <br />
                                 <span class="name"><a href="https://plus.google.com/+VictorLinfield" target="_blank">Link</a></span>
                             </div>
@@ -584,7 +584,7 @@
                             <div class="source">
                                 <span class="title">Devolper</span>
                                   <br>
-                                <span class="title">Maintains: </span>
+                                <span class="title">Maintains: Android One [Sprout4 and Sprout8], One Plus One [Bacon] </span>
                                 <br />
                                 <span class="name"><a href="https://plus.google.com/+AkhilNarang" target="_blank">Link</a></span>
                             </div>
@@ -604,7 +604,7 @@
                             <div class="source">
                                 <span class="title">Maintainer</span>
                                   <br>
-                                <span class="title">Maintains: </span>
+                                <span class="title">Maintains: Samsung Galaxy S3 [I9300] </span>
                                 <br />
                                 <span class="name"><a href="https://plus.google.com/+Gokulbalram" target="_blank">Link</a></span>
                             </div>
@@ -624,7 +624,7 @@
                             <div class="source">
                                 <span class="title">Maintainer</span>
                                   <br>
-                                <span class="title">Maintains: </span>
+                                <span class="title">Maintains: Moto X 2013 [Ghost], Samsung Galaxy S3 Mini [Golden]</span>
                                 <br />
                                 <span class="name"><a href="https://plus.google.com/+AliyanGohar" target="_blank">Link</a></span>
                             </div>
@@ -644,7 +644,7 @@
                             <div class="source">
                                 <span class="title">Maintainer</span>
                                   <br>
-                                <span class="title">Maintains: </span>
+                                <span class="title">Maintains: Galaxy S4 [Jfltetmo] </span>
                                 <br />
                                 <span class="name"><a href="https://plus.google.com/107002554168576794353" target="_blank">Link</a></span>
                             </div>
@@ -665,7 +665,7 @@
                             <div class="source">
                                 <span class="title">Maintainer</span>
                                   <br>
-                                <span class="title">Maintains: </span>
+                                <span class="title">Maintains: Sony Xperia SP [Huashan] </span>
                                 <br />
                                 <span class="name"><a href="https://plus.google.com/104355072611967579746" target="_blank">Link</a></span>
                             </div>
@@ -685,7 +685,7 @@
                             <div class="source">
                                 <span class="title">Designer</span>
                                   <br>
-                                <span class="title">Maintains: </span>
+                                <span class="title">Maintains: Boot Animation </span>
                                 <br />
                                 <span class="name"><a href="https://plus.google.com/+JaskiratPanjrath" target="_blank">Link</a></span>
                             </div>
@@ -694,6 +694,28 @@
                         <!--//speech-bubble-->
                     </div>
                     <!--//author-message-->
+
+
+                      <div class="author-message">
+                        <div class="profile">
+                            <img class="img-responsive" src="assets/images/profileicon.png" alt="" />
+                        </div>
+                        <!--//profile-->
+                        <div class="speech-bubble">
+                            <h3 class="sub-title">Not Listed Or Information Wrong?</h3>
+                            <div class="source">
+                                <span class="title">Give me a PM on hangouts or XDA</span>
+                                  <br>
+                              <span class="name"><a href="http://forum.xda-developers.com/member.php?u=5504962" target="_blank">XDA</a></span>
+                            <span class="name"><a href="https://plus.google.com/+VictorLinfield" target="_blank">Google+</a></span>
+                            </div>
+                            <!--//source-->
+                        </div>
+                        <!--//speech-bubble-->
+                    </div>
+                    <!--//author-message-->
+
+
                 </div>
                 <!--//source-->
             </div>
